store_paper_done

--- a/paper/templates/base.html
+++ b/paper/templates/base.html
@@ -25,7 +25,7 @@
                 <a class="nav-link" href="{% url 'store_paper'%}">Store Paper</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Show Papers</a>
+                <a class="nav-link" href="{% url 'show_papers' %}">Show Papers</a>
               </li>
             </ul>
           </div>
