--- a/paper/templates/store_paper.html
+++ b/paper/templates/store_paper.html
@@ -1,4 +1,13 @@
 {% extends "base.html" %}
+{% load crispy_forms_tags %}
+
 {% block content %}
-<h1>This is for the store paper</h1>
+<div style="width:50%; margin:auto">
+    <h1>Store The Paper</h1>
+    <form method="post">
+        {% csrf_token %}
+        {{form|crispy}}
+        <button class="btn btn-primary" type="submit">Submit</button>
+    </form>
+</div>
 {% endblock content %}
