--- a/paper/templates/show_paper.html
+++ b/paper/templates/show_paper.html
@@ -1,38 +1,37 @@
-{% extends 'base.html' %}
-{% block endblock %}
-
-<div style="width: 70%; margin:auto;">
-  <h1>List Of Papers</h1>
+{% extends "base.html" %}
+{% block content %}
+<div style="width: 90%; margin:auto;">
+  <h1>List Of Books</h1>
   {% if data %}
     <table class="table">
         <thead>
           <tr>
-            <th scope="col">#ID</th>
-            <th scope="col">Book Name</th>
-            <th scope="col">Author Name</th>
-            <th scope="col">Category</th>
-            <th scope="col">First Publication</th>
-            <th scope="col">Last Publication</th>
+            <th scope="col">ID</th>
+            <th scope="col">Student Name</th>
+            <th scope="col">Teacher Name</th>
+            <th scope="col">Course Name</th>
+            <th scope="col">Department Name</th>
+            <th scope="col">Batch Name</th>
+            <th scope="col">Section Name</th>
+            <th scope="col">Submitted Paper</th>
             <th scope="col">Action</th>
           </tr>
         </thead>
         <tbody>
-            {% for item in data %}
-            <tr>
-                <th scope="row">{{item.id}}</th>
-                <td>{{item.book_name}}</td>
-                <td>{{item.author}}</td>
-                <td>{{item.category}}</td>
-                <td>{{item.first_pub}}</td>
-                <td>{{item.last_pub}}</td>
-                <td><a href="{% url 'edit_book' id=item.id %}" class="btn btn-warning btn-sm">Edit</a>
-                   <a href="{% url 'delete_book' id=item.id %}" class="btn btn-danger btn-sm">Delete</a></td>
-              </tr>
-            {% endfor %}
-        </tbody>
-      </table>
-     {% else %}
-     <h3>No Data Available</h3>
-     {% endif %}
-</div>
-{% endblock endblock %}
+          {% for item in data %}
+          <tr>
+              <th scope="row">{{item.id}}</th>
+              <td>{{item.student_Name}}</td>
+              <td>{{item.teacher_name}}</td>
+              <td>{{item.course_name}}</td>
+              <td>{{item.department_name}}</td>
+              <td>{{item.batch_name}}</td>
+              <td>{{item.Section_name}}</td>
+            </tr>
+          {% endfor %}
+      </tbody>
+    </table>
+   {% else %}
+   <h3>No Data Available</h3>
+   {% endif %}
+{% endblock content %}
